# screentime-pro

./: .gitignore  CONVENTIONS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: I18N_PLAN.md  RELEASE.md
output/2026-07-10/: ROOTCAUSE-default-device.md
scripts/: package-release.sh  publish-v0.4.x.md  release-github.sh
sql/: schema.sql  seed_categories.sql  seed_rules.sql
src/: App.vue  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_rounded.py  icon.icns  regen_icns.py
src-tauri/src/: categorizer.rs  classifier.rs  commands.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/tracker/: linux.rs  macos.rs  mod.rs  platform.rs  windows.rs
src/api/: mock.ts  tracker.ts
src/components/: AppRanking.vue  DailyBarChart.vue  DatePicker.vue  DeviceSwitcher.vue  HourlyStackedChart.vue  Modal.vue  OverviewCard.vue
src/i18n/: categories.ts  en-US.ts  index.ts  zh-CN.ts
src/lib/: logger.ts
src/utils/: format.ts
src/views/: Dashboard.vue  Rules.vue  Settings.vue  Trends.vue
